fix(gpu): 修复ansible2.10使用when判断的问题

--- a/roles/plugins/gpu/gpu-plugin/tasks/main.yml
+++ b/roles/plugins/gpu/gpu-plugin/tasks/main.yml
@@ -8,4 +8,4 @@
     shell: "{{ bin_dir }}/kubectl apply -f /tmp/nvidia-plugin.yml"
   when:
     - has_gpu is defined
-    - has_gpu
+    - has_gpu | bool
