--- a/roles/post/tasks/main.yml
+++ b/roles/post/tasks/main.yml
@@ -66,7 +66,7 @@
   shell: "{{ bin_dir }}/kubectl label node {{ inventory_hostname }} hasGpu=yes --overwrite"
   delegate_to: "{{ groups['kube-master'][0] }}"
   when:
-  - container_runtime == 'docker'
-  - has_gpu is defined
-  - has_gpu
-  - support_gpu == 'enable'
+    - container_runtime == 'docker'
+    - has_gpu is defined
+    - has_gpu | bool
+    - support_gpu == 'enable'
