--- a/roles/add-worker/tasks/ceph_rdb.yml
+++ b/roles/add-worker/tasks/ceph_rdb.yml
@@ -1,5 +1,35 @@
-- name: Ceph | install ceph-common
-  package:
-    name:
-      - ceph-common
-    state: present
+- block:
+    - name: Download ceph-utils package | CentOS
+      get_url:
+        validate_certs: no
+        url: "{{ ceph_rpm_download_url }}"
+        dest: "{{ base_dir }}/packages"
+        timeout: "{{ download_timeout_online }}"
+
+    - name: Unarchive ceph-utils package | CentOS
+      unarchive:
+        src: "{{ base_dir }}/packages/{{ ansible_distribution }}_ceph_{{ ansible_architecture }}.tar.gz"
+        dest: "{{ base_dir }}/packages"
+        remote_src: yes
+
+    - name: Install base package | CentOS
+      shell: "rpm -Uvh {{ base_dir }}/packages/{{ ansible_distribution }}_ceph/*.rpm"
+  when: ansible_distribution in [ 'CentOS','RedHat','EulerOS' ]
+
+- block:
+  - name: Download ceph-utils package | Debian
+    get_url:
+      validate_certs: no
+      url: "{{ ceph_deb_download_url }}"
+      dest: "{{ base_dir }}/packages"
+      timeout: "{{ download_timeout_online }}"
+  
+  - name: Unarchive ceph-utils package | Debian
+    unarchive:
+      src: "{{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_release }}_ceph_{{ ansible_architecture }}.tar.gz"
+      dest: "{{ base_dir }}/packages"
+      remote_src: yes
+  
+  - name: Install ceph-utils package | Debian
+    shell: "dpkg -i {{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_release }}_ceph/*.deb"
+  when: ansible_distribution in [ 'Ubuntu','Debian' ]
