--- a/roles/plugins/cluster-storage/external-ceph/tasks/main.yml
+++ b/roles/plugins/cluster-storage/external-ceph/tasks/main.yml
@@ -1,11 +1,43 @@
 - block:
-  - name: Ceph | Install ceph-common
-    package:
-      name:
-        - ceph-common
-      state: present
-    delegate_to: "{{ item }}"
-    with_items: "{{ groups['all'] }}"
+    - block:
+        - name: Download ceph-utils package | CentOS
+          get_url:
+            validate_certs: no
+            url: "{{ ceph_rpm_download_url }}"
+            dest: "{{ base_dir }}/packages"
+            timeout: "{{ download_timeout_online }}"
+
+        - name: Unarchive ceph-utils package | CentOS
+          unarchive:
+            src: "{{ base_dir }}/packages/{{ ansible_distribution }}_ceph_{{ ansible_architecture }}.tar.gz"
+            dest: "{{ base_dir }}/packages"
+            remote_src: yes
+
+        - name: Install base package | CentOS
+          shell: "rpm -Uvh {{ base_dir }}/packages/{{ ansible_distribution }}_ceph/*.rpm"
+      delegate_to: "{{ item }}"
+      with_items: "{{ groups['all'] }}"
+      when: ansible_distribution in [ 'CentOS','RedHat','EulerOS' ]
+
+    - block:
+        - name: Download ceph-utils package | Debian
+          get_url:
+            validate_certs: no
+            url: "{{ ceph_deb_download_url }}"
+            dest: "{{ base_dir }}/packages"
+            timeout: "{{ download_timeout_online }}"
+
+        - name: Unarchive ceph-utils package | Debian
+          unarchive:
+            src: "{{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_release }}_ceph_{{ ansible_architecture }}.tar.gz"
+            dest: "{{ base_dir }}/packages"
+            remote_src: yes
+
+        - name: Install ceph-utils package | Debian
+          shell: "dpkg -i {{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_release }}_ceph/*.deb"
+      delegate_to: "{{ item }}"
+      with_items: "{{ groups['all'] }}"
+      when: ansible_distribution in [ 'Ubuntu','Debian' ]
 
   - name: RBD Provisioner | Create storage-plugin directory
     file:
