--- a/roles/plugins/cluster-storage/glusterfs/tasks/main.yml
+++ b/roles/plugins/cluster-storage/glusterfs/tasks/main.yml
@@ -1,7 +1,35 @@
-- name: "Install glusterfs mount utils"
-  become: true
-  package:
-    name:
-    - glusterfs
-    - glusterfs-fuse
-    state: "present"
+- block:
+    - name: Download  glusterfs mount utils package | CentOS
+      get_url:
+        validate_certs: no
+        url: "{{ gfs_rpm_download_url }}"
+        dest: "{{ base_dir }}/packages"
+        timeout: "{{ download_timeout_online }}"
+
+    - name: Unarchive  glusterfs mount utils package | CentOS
+      unarchive:
+        src: "{{ base_dir }}/packages/{{ ansible_distribution }}_gfs_{{ ansible_architecture }}.tar.gz"
+        dest: "{{ base_dir }}/packages"
+        remote_src: yes
+
+    - name: Install base package | CentOS
+      shell: "rpm -Uvh {{ base_dir }}/packages/{{ ansible_distribution }}_gfs/*.rpm"
+  when: ansible_distribution in [ 'CentOS','RedHat','EulerOS' ]
+
+- block:
+    - name: Download  glusterfs mount utils package | Debian
+      get_url:
+        validate_certs: no
+        url: "{{ gfs_deb_download_url }}"
+        dest: "{{ base_dir }}/packages"
+        timeout: "{{ download_timeout_online }}"
+
+    - name: Unarchive  glusterfs mount utils package | Debian
+      unarchive:
+        src: "{{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_release }}_gfs_{{ ansible_architecture }}.tar.gz"
+        dest: "{{ base_dir }}/packages"
+        remote_src: yes
+
+    - name: Install  glusterfs mount utils package | Debian
+      shell: "dpkg -i {{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_release }}_gfs/*.deb"
+  when: ansible_distribution in [ 'Ubuntu','Debian' ]
