--- a/roles/plugins/cluster-storage/nfs/tasks/main.yml
+++ b/roles/plugins/cluster-storage/nfs/tasks/main.yml
@@ -1,16 +1,37 @@
-- name: NFS | Install nfs-utils
-  package:
-    name:
-      - nfs-utils
-    state: present
+- block:
+    - name: Download nfs-utils package | CentOS
+      get_url:
+        validate_certs: no
+        url: "{{ nfs_rpm_download_url }}"
+        dest: "{{ base_dir }}/packages"
+        timeout: "{{ download_timeout_online }}"
+
+    - name: Unarchive nfs-utils package | CentOS
+      unarchive:
+        src: "{{ base_dir }}/packages/{{ ansible_distribution }}_nfs_{{ ansible_architecture }}.tar.gz"
+        dest: "{{ base_dir }}/packages"
+        remote_src: yes
+
+    - name: Install base package | CentOS
+      shell: "rpm -Uvh {{ base_dir }}/packages/{{ ansible_distribution }}_nfs/*.rpm"
   when: ansible_distribution in [ 'CentOS','RedHat','EulerOS' ]
 
+- block:
+    - name: Download nfs-utils package | Debian
+      get_url:
+        validate_certs: no
+        url: "{{ nfs_deb_download_url }}"
+        dest: "{{ base_dir }}/packages"
+        timeout: "{{ download_timeout_online }}"
 
-- name: NFS | Install nfs-utils
-  package:
-    name:
-      - nfs-common
-    state: present
+    - name: Unarchive nfs-utils package | Debian
+      unarchive:
+        src: "{{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_release }}_nfs_{{ ansible_architecture }}.tar.gz"
+        dest: "{{ base_dir }}/packages"
+        remote_src: yes
+
+    - name: Install nfs-utils package | Debian
+      shell: "dpkg -i {{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_release }}_nfs/*.deb"
   when: ansible_distribution in [ 'Ubuntu','Debian' ]
 
 - block:
