--- a/roles/add-worker/tasks/ceph_rdb.yml
+++ b/roles/add-worker/tasks/ceph_rdb.yml
@@ -8,12 +8,12 @@
 
     - name: Unarchive ceph-utils package | CentOS
       unarchive:
-        src: "{{ base_dir }}/packages/{{ ansible_distribution }}_ceph_{{ ansible_architecture }}.tar.gz"
+        src: "{{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_major_version }}_ceph_{{ ansible_architecture }}.tar.gz"
         dest: "{{ base_dir }}/packages"
         remote_src: yes
 
     - name: Install base package | CentOS
-      shell: "rpm -Uvh {{ base_dir }}/packages/{{ ansible_distribution }}_ceph/*.rpm"
+      shell: "rpm -ivh {{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_major_version }}_ceph/*.rpm --nodeps --force"
   when: ansible_distribution in [ 'CentOS','RedHat','EulerOS' ]
 
 - block:
@@ -32,4 +32,5 @@
   
   - name: Install ceph-utils package | Debian
     shell: "dpkg -i {{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_release }}_ceph/*.deb"
+    ignore_errors: true
   when: ansible_distribution in [ 'Ubuntu','Debian' ]
