--- a/roles/plugins/cluster-storage/glusterfs/tasks/main.yml
+++ b/roles/plugins/cluster-storage/glusterfs/tasks/main.yml
@@ -8,12 +8,12 @@
 
     - name: Unarchive  glusterfs mount utils package | CentOS
       unarchive:
-        src: "{{ base_dir }}/packages/{{ ansible_distribution }}_gfs_{{ ansible_architecture }}.tar.gz"
+        src: "{{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_major_version }}_gfs_{{ ansible_architecture }}.tar.gz"
         dest: "{{ base_dir }}/packages"
         remote_src: yes
 
-    - name: Install base package | CentOS
-      shell: "rpm -Uvh {{ base_dir }}/packages/{{ ansible_distribution }}_gfs/*.rpm"
+    - name: Install glusterfs mount utils package | CentOS
+      shell: "rpm -ivh {{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_major_version }}_gfs/*.rpm --nodeps --force"
   when: ansible_distribution in [ 'CentOS','RedHat','EulerOS' ]
 
 - block:
@@ -32,4 +32,5 @@
 
     - name: Install  glusterfs mount utils package | Debian
       shell: "dpkg -i {{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_release }}_gfs/*.deb"
+      ignore_errors: true
   when: ansible_distribution in [ 'Ubuntu','Debian' ]
