--- a/roles/prepare/base/tasks/debian.yml
+++ b/roles/prepare/base/tasks/debian.yml
@@ -35,22 +35,24 @@
 
 - name: Install base package | Debian
   shell: "dpkg -i {{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_release }}_base/*.deb"
-
+  ignore_errors: true
 # 安装 ipvs
-- name: Debian | Install ipvs  package
-  package:
-    name:
-    - ipset
-    - ipvsadm
-    state: latest
-  when: kube_proxy_mode == "ipvs"
+- name: Download ipvs package | Debian
+  get_url:
+    validate_certs: no
+    url: "{{ ipvs_deb_download_url }}"
+    dest: "{{ base_dir }}/packages"
+    timeout: "{{ download_timeout_online }}"
 
-- name: Disable rsyslog Get journald log 1
-  lineinfile:
-    dest: /etc/rsyslog.conf
-    state: present
-    regexp: 'ModLoad imjournal'
-    line: '#$ModLoad imjournal # provides access to the systemd journal'
+- name: Unarchive ipvs package | Debian
+  unarchive:
+    src: "{{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_release }}_ipvs_{{ ansible_architecture }}.tar.gz"
+    dest: "{{ base_dir }}/packages"
+    remote_src: yes
+
+- name: Install ipvs package | Debian
+  shell: "dpkg -i {{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_release }}_ipvs/*.deb"
+  ignore_errors: true
 
 - name: Disable rsyslog Get journald log 2
   lineinfile:
