--- a/variables.yml
+++ b/variables.yml
@@ -144,22 +144,21 @@ huawei_csi_passwdencrypt_download_url: "{{ registry_protocol }}://{{ dns_reposit
 helm2_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/helm/{{ helm_v2_version }}/helm-{{ helm_v2_version }}-linux-{{ architectures }}.tar.gz"
 helm3_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/helm/{{ helm_v3_version }}/helm-{{ helm_v3_version }}-linux-{{ architectures }}.tar.gz"
 
-# ----------------------- chrony 下载地址 --------------------
-#chrony_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/chrony/{{ architectures }}/chrony_xenial.tar.gz"
-
-# ----------------------- CentOS rpm下载地址 --------------------
+# ----------------------- CentOS/EulerOS/Redhat rpm下载地址 --------------------
 base_rpm_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/packages/{{ architectures }}/{{ ansible_distribution }}_{{ ansible_distribution_major_version }}_base_{{ ansible_architecture }}.tar.gz"
 ipvs_rpm_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/packages/{{ architectures }}/{{ ansible_distribution }}_{{ ansible_distribution_major_version }}_ipvs_{{ ansible_architecture }}.tar.gz"
 ceph_rpm_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/packages/{{ architectures }}/{{ ansible_distribution }}_{{ ansible_distribution_major_version }}_ceph_{{ ansible_architecture }}.tar.gz"
 gfs_rpm_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/packages/{{ architectures }}/{{ ansible_distribution }}_{{ ansible_distribution_major_version }}_gfs_{{ ansible_architecture }}.tar.gz"
 oceanstor_rpm_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/packages/{{ architectures }}/{{ ansible_distribution }}_{{ ansible_distribution_major_version }}_oceanStor_{{ ansible_architecture }}.tar.gz"
 nfs_rpm_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/packages/{{ architectures }}/{{ ansible_distribution }}_{{ ansible_distribution_major_version }}_nfs_{{ ansible_architecture }}.tar.gz"
+chrony_rpm_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/packages/{{ architectures }}/{{ ansible_distribution }}_{{ ansible_distribution_major_version }}_chrony_{{ ansible_architecture }}.tar.gz"
 
-# ----------------------- Ubuntu deb下载地址 --------------------
+# ----------------------- Ubuntu/Debian deb下载地址 --------------------
 base_deb_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/packages/{{ architectures }}/{{ ansible_distribution }}_{{ ansible_distribution_release }}_base_{{ ansible_architecture }}.tar.gz"
 ipvs_deb_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/packages/{{ architectures }}/{{ ansible_distribution }}_{{ ansible_distribution_release }}_ipvs_{{ ansible_architecture }}.tar.gz"
 ceph_deb_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/packages/{{ architectures }}/{{ ansible_distribution }}_{{ ansible_distribution_release }}_ceph_{{ ansible_architecture }}.tar.gz"
 gfs_deb_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/packages/{{ architectures }}/{{ ansible_distribution }}_{{ ansible_distribution_release }}_gfs_{{ ansible_architecture }}.tar.gz"
 oceanstor_deb_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/packages/{{ architectures }}/{{ ansible_distribution }}_{{ ansible_distribution_release }}_oceanStor_{{ ansible_architecture }}.tar.gz"
 nfs_deb_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/packages/{{ architectures }}/{{ ansible_distribution }}_{{ ansible_distribution_release }}_nfs_{{ ansible_architecture }}.tar.gz"
+chrony_deb_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/packages/{{ architectures }}/{{ ansible_distribution }}_{{ ansible_distribution_release }}_chrony_{{ ansible_architecture }}.tar.gz"
 
