--- a/roles/load-balancer/tasks/internal.yml
+++ b/roles/load-balancer/tasks/internal.yml
@@ -2,25 +2,11 @@
   file: name=/etc/haproxy state=directory
 
 - block:
-  - name: Arm64 | Modify EulerOS haproxy.service
-    template:
-      src: haproxy/haproxy.euler.service.j2
-      dest: /usr/lib/systemd/system/haproxy.service
-    when: architectures == 'arm64'
-
-  - name: Amd64 | Modify EulerOS haproxy.service
-    template:
-      src: haproxy/haproxy-centos.service.j2
-      dest: /usr/lib/systemd/system/haproxy.service
-    when: architectures == 'amd64'
-  when: ansible_distribution in [ 'EulerOS' ]
-
-- block:
   - name: Modify haproxy.service
     template:
       src: haproxy/haproxy-centos.service.j2
       dest: /usr/lib/systemd/system/haproxy.service
-  when: ansible_distribution in [ 'CentOS','RedHat' ]
+  when: ansible_distribution in [ 'CentOS','RedHat','EulerOS' ]
 
 - block:
     - name: Modify haproxy.service
